 * use fc_safe_read instead of read, and fc_safe_write instead of write
   you must upgrade libfastcommon to V1.35 or later
 * fix getFileContentEx read bytes,
   you must upgrade libfastcommon to V1.36 or later
 * do NOT sync storage server info to tracker leader
 * adjust parameter store_server when use_trunk_file is true
 * clear sync src id when tracker response ENOENT

Version 5.09  2016-12-29
 * bug fixed: list_all_groups expand buffer auto for so many groups
 * tracker.conf add parameters: min_buff_size and max_buff_size
 * php extension fix free object bug in PHP 7

Version 5.08  2016-04-08
 * install library to $(TARGET_PREFIX)/lib anyway
 * php extension compiled in PHP 7
 * dio thread use blocked_queue and php extension use php7_ext_wrapper.h,
   you must upgrade libfastcommon to V1.25 or later
 * remove common/linux_stack_trace.[hc]

Version 5.07  2015-09-13
 * schedule task add the "second" field
 * make.sh changed, you must upgrade libfastcommon to V1.21 or later
 * bug fixed: storage_disk_recovery.c skip the first file (binlog first line)
 * bug fixed: should close connection after fetch binlog
 * fdfs_storaged.c: advance the position of daemon_init
 * set log rotate time format
 * bug fixed: must check store_path_index

Version 5.06  2015-05-12
 * compile passed in mac OS Darwin
 * correct scripts in subdir init.d
 * check item thread_stack_size in storage.conf, you must
   upgrade libfastcommon to V1.14 or later

Version 5.05  2014-11-22
 * tracker_mem.c log more info
 * remove useless global variable: g_network_tv
 * storage can fetch it's group_name from tracker server

Version 5.04  2014-09-16
 * add fastdfs.spec for build RPM on Linux
 * depend on libfastcommon
 * in multi tracker servers case, when receive higher status like
   online / active and the storage status is wait_sync or syncing,
   the tracker adjust storage status to newer, and the storage rejoin
   to the tracker server
 * fdfs_monitor support delete empty group