@@ -153,6 +153,9 @@ static int storage_do_get_group_name(ConnectionInfo *pTrackerServer)
 	if ((result=fdfs_recv_response(pTrackerServer, \
 		&pInBuff, FDFS_GROUP_NAME_MAX_LEN, &in_bytes)) != 0)
 	{
+		logError("file: "__FILE__", line: %d, "
+                "fdfs_recv_response fail, result: %d",
+                __LINE__, result);
 		return result;
 	}
 
