@@ -249,6 +249,9 @@ static int storage_sync_copy_file(ConnectionInfo *pStorageServer, \
 		if ((result=fdfs_recv_response(pStorageServer, \
 			&pBuff, 0, &in_bytes)) != 0)
 		{
+            logError("file: "__FILE__", line: %d, "
+                    "fdfs_recv_response fail, result: %d",
+                    __LINE__, result);
 			break;
 		}
 	} while (0);
@@ -442,6 +445,9 @@ static int storage_sync_modify_file(ConnectionInfo *pStorageServer, \
 		if ((result=fdfs_recv_response(pStorageServer, \
 			&pBuff, 0, &in_bytes)) != 0)
 		{
+            logError("file: "__FILE__", line: %d, "
+                    "fdfs_recv_response fail, result: %d",
+                    __LINE__, result);
 			break;
 		}
 	} while (0);
@@ -590,6 +596,9 @@ static int storage_sync_truncate_file(ConnectionInfo *pStorageServer, \
 		if ((result=fdfs_recv_response(pStorageServer, \
 			&pBuff, 0, &in_bytes)) != 0)
 		{
+            logError("file: "__FILE__", line: %d, "
+                    "fdfs_recv_response fail, result: %d",
+                    __LINE__, result);
 			break;
 		}
 	} while (0);
@@ -658,10 +667,19 @@ static int storage_sync_delete_file(ConnectionInfo *pStorageServer, \
 
 	pBuff = in_buff;
 	result = fdfs_recv_response(pStorageServer, &pBuff, 0, &in_bytes);
-	if (result == ENOENT)
-	{
-		result = 0;
-	}
+    if (result != 0)
+    {
+        if (result == ENOENT)
+        {
+            result = 0;
+        }
+        else
+        {
+            logError("file: "__FILE__", line: %d, "
+                    "fdfs_recv_response fail, result: %d",
+                    __LINE__, result);
+        }
+    }
 	
 	return result;
 }
@@ -698,7 +716,14 @@ static int storage_report_my_server_id(ConnectionInfo *pStorageServer)
 	}
 
 	pBuff = in_buff;
-	return fdfs_recv_response(pStorageServer, &pBuff, 0, &in_bytes);
+	result = fdfs_recv_response(pStorageServer, &pBuff, 0, &in_bytes);
+    if (result != 0)
+    {
+        logError("file: "__FILE__", line: %d, "
+                "fdfs_recv_response fail, result: %d",
+                __LINE__, result);
+    }
+    return result;
 }
 
 /**
@@ -917,10 +942,19 @@ static int storage_sync_link_file(ConnectionInfo *pStorageServer, \
 
 	pBuff = in_buff;
 	result = fdfs_recv_response(pStorageServer, &pBuff, 0, &in_bytes);
-	if (result == ENOENT)
-	{
-		result = 0;
-	}
+    if (result != 0)
+    {
+        if (result == ENOENT)
+        {
+            result = 0;
+        }
+        else
+        {
+            logError("file: "__FILE__", line: %d, "
+                    "fdfs_recv_response fail, result: %d",
+                    __LINE__, result);
+        }
+    }
 	
 	return result;
 }
